# krill

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTICE  README.md  example-services.yaml  index.html  justfile  mkdocs.yml  roadmap.md  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: krill-demo.mov
configuration/: index.html
crates/krill-cli/: Cargo.toml
crates/krill-cli/src/: config_discovery.rs  daemon_manager.rs  lib.rs  main.rs
crates/krill-cli/src/commands/: daemon.rs  down.rs  logs.rs  mod.rs  ps.rs  up.rs
crates/krill-cli/tests/: config_discovery_test.rs  daemon_manager_test.rs
crates/krill-common/: Cargo.toml
crates/krill-common/src/: config.rs  dag.rs  dependency.rs  execute.rs  health.rs  ipc.rs  lib.rs  model.rs  policy.rs  process.rs  schema.rs  validation.rs
crates/krill-common/tests/: integration.rs
crates/krill-daemon/: Cargo.toml
crates/krill-daemon/src/: ipc_server.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  runner.rs
crates/krill-daemon/src/daemon/: mod.rs
crates/krill-daemon/src/dag/: mod.rs
crates/krill-daemon/src/health/: mod.rs
crates/krill-daemon/src/ipc/: mod.rs
crates/krill-daemon/src/process/: mod.rs
crates/krill-daemon/src/safety/: mod.rs
crates/krill-daemon/src/supervisor/: mod.rs
crates/krill-daemon/tests/: integration.rs
crates/krill-sdk-rust/: Cargo.toml
crates/krill-sdk-rust/src/: lib.rs
crates/krill-sdk-rust/tests/: integration.rs
crates/krill-tui/: Cargo.toml
crates/krill-tui/src/: app.rs  lib.rs  main.rs  ui.rs  ui.rs.backup
dependencies/: index.html
docs/: README.md  configuration.md  dependencies.md  getting-started.md  health-checks.md  index.md  pixi.toml  quick-reference.md  sdk-installation.md
docs/examples/: docker.md  index.md  pixi-services.md  ros2-navigation.md  ros2-talker-listener.md  shell-scripts.md
docs/stylesheets/: extra.css
examples/: TEST-SHELL-README.md  index.html  krill-docker.yaml  krill-example.yaml  krill-pixi.yaml  krill-ros2-navigation.yaml  krill-ros2.yaml  krill-shell.yaml  krill.yaml  krilll-ros2.yaml  pixi-test.yaml  pulsar.yaml  simple.yaml  test-shell.yaml
examples/docker/: index.html
examples/pixi-proj/: pixi.toml
examples/pixi-services/: index.html
examples/ros2/: pixi.toml
examples/ros2-navigation/: index.html
examples/ros2-talker-listener/: index.html
examples/scripts/: counter1.sh  counter2.sh  failing.sh  fast_counter.sh  logger.py  logger.sh
examples/services/: README.md
examples/services/data-analyzer/: analyzer.py  pixi.toml
examples/services/data-processor/: pixi.toml  processor.py
examples/services/decision-controller/: controller.py  pixi.toml
examples/shell-scripts/: index.html
getting-started/: index.html
health-checks/: index.html
lidar/: pixi.toml
quick-reference/: index.html
schemas/: krill.schema.json
sdk-installation/: index.html
sdk/krill-cpp/: README.md  example.cpp  krill.hpp
sdk/krill-python/: .gitignore  README.md  __init__.py  example.py  example_async.py  krill.py  setup.py
sdk/krill-python/tests/: test_krill.py
search/: search_index.json
~/.krill/logs/session-20260206-171321/: timeline.jsonl
~/.krill/logs/session-20260206-171442/: timeline.jsonl
~/.krill/logs/session-20260206-171644/: timeline.jsonl
~/.krill/logs/session-20260206-171849/: timeline.jsonl
