[workspace]
resolver = "2"
members = [
    "crates/krill-common",
    "crates/krill-daemon",
    "crates/krill-tui",
    "crates/krill-sdk-rust",
    "crates/krill-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }
humantime-serde = "1.1"
dirs = "5.0"
futures = "0.3"
sysinfo = "0.31"
