[package]
name = "krill-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] } # Precise timestamps for logs
uuid = { version = "1.0", features = ["v4", "serde"] } # Session IDs
serde_json = "1.0"
