[package]
name = "krill-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
humantime-serde.workspace = true
nix.workspace = true

[dev-dependencies]
tempfile = "3.10"
