[package]
name = "krill-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
humantime-serde.workspace = true
nix = { version = "0.31.1", features = ["signal", "process", "fs"] }

[dev-dependencies]
tempfile = "3.10"
