[package]
name = "krill-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "krill-daemon"
path = "src/main.rs"

[dependencies]
krill-common = { path = "../krill-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
nix.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3.10"
