[package]
name = "krill-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "krill-daemon"
path = "src/main.rs"

[dependencies]
krill-common = { path = "../krill-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
futures.workspace = true
nix = { version = "0.31.1", features = ["signal", "process", "fs"] }
os_pipe = "1.2.3"


[dev-dependencies]
tempfile = "3.10"
