[package]
name = "krill-sdk-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
krill-common = { path = "../krill-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.10"
krill-common = { path = "../krill-common" }
