[package]
name = "krill-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "krill-tui"
path = "src/main.rs"

[dependencies]
krill-common = { path = "../krill-common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
sysinfo.workspace = true
nix = "0.31.1"
